--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
-    "zod": "^3.22.3"
+    "zod": "^3.22.3",
+    "zod-error": "^1.5.0"
   }
 }
